# KALMAN_FILTER

./: .gitignore  CMakeLists.txt  PlotII.py  README.md  plot.py
InputFiles/: EM_Recordings.csv
KALMAN_FILTER/: CMakeLists.txt
KALMAN_FILTER/Trajectories/: EM_Recordings.csv
KALMAN_FILTER/executable/: Main.cpp
KALMAN_FILTER/lib_emtracker/: CMakeLists.txt
KALMAN_FILTER/lib_emtracker/config/: 610059_ctrref.rom  610094_ctrref.rom  config.yaml
KALMAN_FILTER/lib_emtracker/include/: KalmanFilter.hpp  RigidTransformation.hpp
KALMAN_FILTER/lib_emtracker/ndi_api/: CMakeLists.txt
KALMAN_FILTER/lib_emtracker/ndi_api/src/: CombinedApi.cpp
KALMAN_FILTER/lib_emtracker/src/: KalmanFilter.cpp
Kalman_Filter/: CMakeLists.txt
Kalman_Filter/include/: KalmanFilter.hpp
Kalman_Filter/src/: KalmanFilter.cpp
Trajectories/: 3Dplotter.py
executable/: CMakeLists.txt  Main.cpp
lib_emtracker/: CMakeLists.txt
lib_emtracker/config/: 610158_ctrtip.rom  Landmarks_Measured.csv  Landmarks_Truth.csv  Reference2CTR_Transformation.csv
lib_emtracker/include/: EMTracker.hpp  KalmanFilter.hpp
lib_emtracker/src/: EMTracker.cpp  KalmanFilter.cpp  RigidTransformation.cpp
